--- a/TextAdventureTest/Base.lproj/Main.storyboard
+++ b/TextAdventureTest/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YTn-7k-cX9">
-                                <rect key="frame" x="329" y="603" width="30" height="30"/>
+                                <rect key="frame" x="329" y="617" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="Gpn-cf-i8e"/>
                                     <constraint firstAttribute="height" constant="30" id="pN1-hl-zmC"/>
@@ -110,7 +110,7 @@
                             <constraint firstItem="9ta-f4-ck9" firstAttribute="trailing" secondItem="bC1-UA-4vQ" secondAttribute="trailing" constant="80" id="Wkw-V5-VYm"/>
                             <constraint firstItem="ehr-2y-n6p" firstAttribute="top" secondItem="9ta-f4-ck9" secondAttribute="top" constant="20" id="XjI-T7-jEO"/>
                             <constraint firstItem="9ta-f4-ck9" firstAttribute="trailing" secondItem="ehr-2y-n6p" secondAttribute="trailing" constant="16" id="lWN-VM-nYP"/>
-                            <constraint firstItem="EOy-OG-OQx" firstAttribute="top" secondItem="YTn-7k-cX9" secondAttribute="bottom" id="ql8-2L-7dz"/>
+                            <constraint firstItem="EOy-OG-OQx" firstAttribute="bottom" secondItem="YTn-7k-cX9" secondAttribute="bottom" id="ql8-2L-7dz"/>
                             <constraint firstItem="wWL-3r-Z1e" firstAttribute="top" secondItem="r9Y-f1-1Vz" secondAttribute="bottom" constant="73" id="voQ-IE-UxM"/>
                             <constraint firstItem="9ta-f4-ck9" firstAttribute="bottom" secondItem="bC1-UA-4vQ" secondAttribute="bottom" constant="88" id="yrh-eZ-wBD"/>
                             <constraint firstItem="9ta-f4-ck9" firstAttribute="bottom" secondItem="EOy-OG-OQx" secondAttribute="bottom" constant="20" id="zCn-PT-NOc"/>
@@ -328,7 +328,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="14u-FT-LhY">
-                                <rect key="frame" x="16" y="603" width="30" height="30"/>
+                                <rect key="frame" x="16" y="624" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="L2D-0U-WlJ"/>
                                     <constraint firstAttribute="width" constant="30" id="zoE-uc-7OL"/>
@@ -463,7 +463,7 @@
                             <constraint firstItem="lZF-l3-CDe" firstAttribute="width" secondItem="g8G-x2-4K1" secondAttribute="width" id="7gD-eQ-uEr"/>
                             <constraint firstItem="l04-wa-IbN" firstAttribute="bottom" secondItem="afo-jV-d2w" secondAttribute="bottom" constant="13" id="8lN-G8-eaS"/>
                             <constraint firstItem="ma3-uB-MEi" firstAttribute="bottom" secondItem="deL-aU-2ba" secondAttribute="bottom" id="CtR-BO-Vmn"/>
-                            <constraint firstItem="afo-jV-d2w" firstAttribute="top" secondItem="14u-FT-LhY" secondAttribute="bottom" id="DI5-uu-7tl"/>
+                            <constraint firstItem="afo-jV-d2w" firstAttribute="bottom" secondItem="14u-FT-LhY" secondAttribute="bottom" id="DI5-uu-7tl"/>
                             <constraint firstItem="l04-wa-IbN" firstAttribute="trailing" secondItem="g8G-x2-4K1" secondAttribute="trailing" constant="16" id="Fg3-x1-Kyc"/>
                             <constraint firstItem="2Sy-JV-YPO" firstAttribute="top" secondItem="deL-aU-2ba" secondAttribute="bottom" constant="22" id="IRN-Z8-Q6m"/>
                             <constraint firstItem="g8G-x2-4K1" firstAttribute="bottom" secondItem="bjt-Ut-OQk" secondAttribute="bottom" id="Jn5-4A-zFU"/>
@@ -651,7 +651,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LgT-X3-8pE">
-                                <rect key="frame" x="16" y="603" width="30" height="30"/>
+                                <rect key="frame" x="16" y="617" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="HPu-Wz-D5l"/>
                                     <constraint firstAttribute="height" constant="30" id="lgf-ve-8Lh"/>
@@ -662,7 +662,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHn-dC-DUv">
-                                <rect key="frame" x="329" y="603" width="30" height="30"/>
+                                <rect key="frame" x="329" y="617" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="gEx-db-E3k"/>
                                     <constraint firstAttribute="width" constant="30" id="uvA-P5-C8l"/>
@@ -706,7 +706,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hIH-O7-QCO" secondAttribute="trailing" constant="20" id="bLm-x4-gQw"/>
                             <constraint firstItem="cO3-UW-fe1" firstAttribute="top" secondItem="ZZh-ev-va6" secondAttribute="bottom" constant="14" id="boF-dL-tWS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gRQ-Xt-sRG" secondAttribute="trailing" constant="16" id="cX1-Cb-0K0"/>
-                            <constraint firstItem="gRQ-Xt-sRG" firstAttribute="top" secondItem="LgT-X3-8pE" secondAttribute="bottom" id="cbs-Ge-4Bq"/>
+                            <constraint firstItem="gRQ-Xt-sRG" firstAttribute="bottom" secondItem="LgT-X3-8pE" secondAttribute="bottom" id="cbs-Ge-4Bq"/>
                             <constraint firstItem="hIH-O7-QCO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="dMk-WS-Whn"/>
                             <constraint firstItem="BuD-gu-dgh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="hYG-gP-gte"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="u02-64-D2b" secondAttribute="trailing" constant="16" id="hiw-Di-vHR"/>
@@ -719,7 +719,7 @@
                             <constraint firstItem="BuD-gu-dgh" firstAttribute="top" secondItem="JJ9-7i-SFR" secondAttribute="bottom" constant="7" id="x1e-ds-si3"/>
                             <constraint firstItem="Ut2-1i-Skq" firstAttribute="centerX" secondItem="hIH-O7-QCO" secondAttribute="centerX" id="xaj-vX-G4Q"/>
                             <constraint firstItem="Htd-dA-emV" firstAttribute="centerY" secondItem="ZlU-79-URy" secondAttribute="centerY" id="yIW-f8-iDa"/>
-                            <constraint firstItem="gRQ-Xt-sRG" firstAttribute="top" secondItem="eHn-dC-DUv" secondAttribute="bottom" id="z43-IC-cbF"/>
+                            <constraint firstItem="gRQ-Xt-sRG" firstAttribute="bottom" secondItem="eHn-dC-DUv" secondAttribute="bottom" id="z43-IC-cbF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
