--- a/TextAdventureTest/Base.lproj/Main.storyboard
+++ b/TextAdventureTest/Base.lproj/Main.storyboard
@@ -510,6 +510,68 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="841.52923538230891"/>
         </scene>
+        <!--Map View Controller-->
+        <scene sceneID="vd7-h8-S6e">
+            <objects>
+                <viewController storyboardIdentifier="MapScene" id="ew5-YU-cem" customClass="MapViewController" customModule="TextAdventureTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="abn-c2-l8g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAPPA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7AD-lb-c3Q">
+                                <rect key="frame" x="16" y="40" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="qxa-gx-nQk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="26"/>
+                                <color key="textColor" red="0.86260795589999995" green="0.62729614970000003" blue="0.24099510909999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ver. 1.0 (01D27LX189)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="db2-Xq-SZR">
+                                <rect key="frame" x="16" y="633" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="vUH-t9-qxT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="xibLocKey" value="APP_VERSION"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gLX-QQ-YLW">
+                                <rect key="frame" x="16" y="624" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="1XP-U4-JhW"/>
+                                    <constraint firstAttribute="height" constant="30" id="dQX-Ei-4nK"/>
+                                </constraints>
+                                <state key="normal" image="home_btn"/>
+                                <connections>
+                                    <action selector="backToHomeButtonPressed:" destination="ew5-YU-cem" eventType="touchUpInside" id="7OQ-MJ-JX6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.25326910609999997" green="0.30571019649999998" blue="0.32672655579999998" alpha="1" colorSpace="deviceRGB"/>
+                        <constraints>
+                            <constraint firstItem="wQo-2w-MbO" firstAttribute="bottom" secondItem="db2-Xq-SZR" secondAttribute="bottom" constant="13" id="5tF-RB-b0V"/>
+                            <constraint firstItem="gLX-QQ-YLW" firstAttribute="leading" secondItem="wQo-2w-MbO" secondAttribute="leading" constant="16" id="9Kx-pA-cdl"/>
+                            <constraint firstItem="wQo-2w-MbO" firstAttribute="trailing" secondItem="db2-Xq-SZR" secondAttribute="trailing" constant="16" id="EJE-Is-17X"/>
+                            <constraint firstItem="gLX-QQ-YLW" firstAttribute="bottom" secondItem="db2-Xq-SZR" secondAttribute="bottom" id="Kmn-PL-LM1"/>
+                            <constraint firstItem="7AD-lb-c3Q" firstAttribute="top" secondItem="wQo-2w-MbO" secondAttribute="top" constant="20" id="NSr-F3-Z9l"/>
+                            <constraint firstItem="db2-Xq-SZR" firstAttribute="leading" secondItem="wQo-2w-MbO" secondAttribute="leading" constant="16" id="f6D-GK-0eC"/>
+                            <constraint firstItem="7AD-lb-c3Q" firstAttribute="leading" secondItem="wQo-2w-MbO" secondAttribute="leading" constant="16" id="l4A-32-tZQ"/>
+                            <constraint firstItem="wQo-2w-MbO" firstAttribute="trailing" secondItem="7AD-lb-c3Q" secondAttribute="trailing" constant="16" id="the-n7-HxS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wQo-2w-MbO"/>
+                    </view>
+                    <connections>
+                        <outlet property="backToHomeButton" destination="gLX-QQ-YLW" id="q53-Zq-KSb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uf3-NI-c7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1050" y="842"/>
+        </scene>
         <!--Main Scene View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
